# lotus-engine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  GLSLValidateTargets.props  README.md  ffxi.sln  ffxi.vcxproj  ffxi.vcxproj.filters  lotus-engine.vcxproj  lotus-engine.vcxproj.filters  main.cpp  test_loader.h  xmake.lua
engine/: CMakeLists.txt  async_queue.h  audio.cpp  audio.h  background_work.cpp  background_work.h  config.cpp  config.h  core.cpp  core.h  game.cpp  game.h  input.cpp  input.h  light_manager.cpp  light_manager.h  lotus-engine.vcxproj  lotus-engine.vcxproj.filters  random.h  scene.cpp  scene.h  shared_linked_list.cpp  shared_linked_list.h  task.cpp  task.h  types.h  work_item.cpp  work_item.h  worker_pool.cpp  worker_pool.h  worker_task.h  worker_thread.cpp  worker_thread.h  worker_thread_concurrent.cpp  worker_thread_concurrent.h  workgroup.cpp  workgroup.h  xmake.lua
engine/engine/: CMakeLists.txt  config.cpp  config.h  core.cpp  core.h  game.h  input.cpp  input.h  light_manager.cpp  light_manager.h  scene.cpp  scene.h  types.h  work_item.h  worker_pool.cpp  worker_pool.h  worker_thread.cpp  worker_thread.h
engine/engine/entity/: camera.cpp  camera.h  deformable_entity.cpp  entity.cpp  entity.h  free_flying_camera.cpp  free_flying_camera.h  landscape_entity.cpp  (+7 more)
engine/entity/: CMakeLists.txt  camera.cpp  camera.h  deformable_entity.cpp  deformable_entity.h  entity.cpp  entity.h  free_flying_camera.cpp  free_flying_camera.h  landscape_entity.cpp  landscape_entity.h  particle.cpp  particle.h  renderable_entity.cpp  renderable_entity.h  third_person_boom_camera.cpp  third_person_boom_camera.h
engine/renderer/: CMakeLists.txt  acceleration_structure.cpp  acceleration_structure.h  animation.cpp  animation.h  material.cpp  material.h  memory.cpp  memory.h  mesh.cpp  mesh.h  model.cpp  model.h  raytrace_query.cpp  raytrace_query.h  skeleton.cpp  skeleton.h  texture.cpp  texture.h
engine/task/: CMakeLists.txt  acceleration_build.cpp  acceleration_build.h  dependency_dummy.cpp  dependency_dummy.h  entity_render.cpp  entity_render.h  landscape_entity_init.cpp  landscape_entity_init.h  model_init.cpp  model_init.h  particle_entity_init.cpp  particle_entity_init.h  particle_model_init.cpp  renderable_entity_init.cpp  renderable_entity_init.h  texture_init.cpp  texture_init.h  transform_skeleton.cpp  transform_skeleton.h  ui_element_init.cpp  ui_element_init.h
engine/ui/: CMakeLists.txt  element.cpp  element.h  events.h  ui.cpp  ui.h
ffxi/: CMakeLists.txt  GLSLValidateVS.props  config.cpp  config.h  ffxi.cpp  ffxi.h  ffxi.vcxproj  ffxi.vcxproj.filters  ffxi_load_land_test.cpp  ffxi_load_land_test.h  fs.h  key_tables.h  main.cpp  mmb.cpp  mmb.h  mzb.cpp  particle_tester.cpp  particle_tester.h  scheduler_resources.cpp  scheduler_resources.h  stb.cpp  stb.h  system_dat.cpp  system_dat.h  test_loader.h  texture.cpp  texture.h  vana_time.h  xmake.lua
ffxi/audio/: CMakeLists.txt  adpcm.cpp  adpcm.h  adpcmstream.cpp  adpcmstream.h  ffxi_audio.cpp  ffxi_audio.h  pcm.cpp  pcm.h
ffxi/dat/: CMakeLists.txt  cib.cpp  cib.h  d3m.cpp  d3m.h  dat.cpp  dat.h  dat_chunk.h  dat_loader.cpp  dat_loader.h  dat_parser.cpp  dat_parser.h  dxt3.cpp  dxt3.h  generator.cpp  generator.h  key_tables.h  mmb.cpp  mmb.h  mo2.cpp  mo2.h  mzb.cpp  mzb.h  os2.cpp  os2.h  scheduler.cpp  scheduler.h  sep.cpp  sep.h  sk2.cpp  sk2.h
ffxi/entity/: CMakeLists.txt  actor.cpp  actor.h  actor_data.h  actor_skeleton_static.cpp  actor_skeleton_static.h  landscape_entity.cpp  landscape_entity.h  particle.cpp  particle.h  third_person_ffxi_camera.cpp  third_person_ffxi_camera.h  third_person_ffxiv_camera.cpp  third_person_ffxiv_camera.h
ffxi/shaders/: CMakeLists.txt  animation_skin.comp  blend.frag  closesthit.rchit  color_hit.rahit  common.glsl  d3m_gbuffer_vert.vert  deferred.vert  deferred_raster.frag  deferred_raytrace.frag  deferred_raytrace_hybrid.frag  ffxiactor_gbuffer_vert.vert  gbuffer_frag.frag  gbuffer_vert.vert  landscape_gbuffer_vert.vert  landscape_shadow_vert.vert  miss.rmiss  miss_gi.rmiss  mmb_closest_hit.rchit  mmb_color_hit.rahit  mmb_gbuffer_vert.vert  mmb_shadow_vert.vert  particle_add.frag  particle_blend.frag  particle_closest_hit.rchit  particle_closest_hit_aabb.rchit  particle_color_hit.rahit  particle_color_hit_aabb.rahit  particle_gbuffer_vert.vert  particle_intersection.rint  particle_shadow_color_hit.rahit  particle_shadow_color_hit_aabb.rahit  particle_shadow_vert.vert  post_process.comp  quad.vert  query_closest_hit.rchit  raygen.rgen  raygen_hybrid.rgen  sampling.glsl  shadow_frag.frag  (+5 more)
ffxi/task/: CMakeLists.txt  actor_dat_load.cpp  actor_dat_load.h  collision_model_init.cpp  collision_model_init.h  landscape_dat_load.cpp  landscape_dat_load.h
lotus/: CMakeLists.txt  async_queue.h  audio.cpp  audio.cppm  audio.h  config.cpp  config.cppm  config.h  core.cpp  core.h  engine.cpp  engine.cppm  game.cpp  game.cppm  game.h  idgenerator.h  input.cpp  input.cppm  input.h  light_manager.cpp  light_manager.cppm  light_manager.h  lotus.cppm  random.h  scene.cpp  scene.cppm  scene.h  shared_linked_list.h  task.h  types.h  worker_pool.cpp  worker_pool.h  worker_task.h
lotus/audio/: CMakeLists.txt  engine.cpp  engine.cppm  instance.cppm  source.cppm
lotus/entity/: CMakeLists.txt  entity.cpp  entity.cppm  entity.h
lotus/renderer/: CMakeLists.txt  acceleration_structure.cpp  acceleration_structure.cppm  acceleration_structure.h  animation.cpp  animation.cppm  animation.h  material.cpp  material.cppm  material.h  memory.cpp  memory.cppm  memory.h  mesh.cpp  mesh.cppm  mesh.h  model.cpp  model.cppm  model.h  raytrace_query.cpp  raytrace_query.cppm  raytrace_query.h  sdl_inc.h  skeleton.cpp  skeleton.cppm  skeleton.h  texture.cpp  texture.cppm  texture.h
lotus/ui/: CMakeLists.txt  element.cpp  element.cppm  element.h  events.cpp  events.cppm  events.h  ui.cpp  ui.cppm  ui.h
lotus/util/: CMakeLists.txt  async_queue.cppm  id_generator.cppm  random.cppm  shared_linked_list.cppm  task.cppm  types.cppm  util.cppm  worker_pool.cpp  worker_pool.cppm  worker_task.cppm
(+479 files in other folders)
