target_sources(engine
    PRIVATE
    config.cpp
    config.h
    core.cpp
    core.h
    game.h
    input.cpp
    input.h
    light_manager.cpp
    light_manager.h
    random.h
    scene.cpp
    scene.h
    types.h
    worker_pool.cpp
    worker_pool.h
    worker_thread.cpp
    worker_thread.h
    work_item.cpp
    work_item.h
    )

add_subdirectory(entity)
add_subdirectory(renderer)
add_subdirectory(task)
