target_sources(engine
    PRIVATE
    animation_component.cpp
    animation_component.h
    camera_cascades_component.cpp
    camera_cascades_component.h
    component.cpp
    component.h
    free_flying_camera_component.cpp
    free_flying_camera_component.h
    input_component.cpp
    input_component.h
    particle_parent_component.cpp
    particle_parent_component.h
    third_person_camera_component.cpp
    third_person_camera_component.h
    third_person_entity_input_component.cpp
    third_person_entity_input_component.h
    tick_component.h
    )

add_subdirectory(component_rewrite_test)
